added neanderthal profile. (#319)
Needed for certian recent jdk (> 11) versions to run all tests.